Replace deprecated getId() with threadId()